# applications-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: todo.md
docs/api/: all-applications.md  design.md
docs/api/mac/: bundle.md  sample-code.md
examples/: apps.rs  icons.rs  load_icon.rs  ps.ps1
examples/macos/: dev.swift  frontmost-app.swift  running-apps.swift
examples/macos/exp-api/: get-all-apps.swift
examples/macos/exp-api/exp-api/: apps.swift  main.swift
examples/macos/exp-api/exp-api.xcodeproj/: project.pbxproj
examples/macos/exp-api/exp-api.xcodeproj/project.xcworkspace/xcuserdata/hacker.xcuserdatad/: UserInterfaceState.xcuserstate
examples/macos/exp-api/exp-api.xcodeproj/xcuserdata/hacker.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/macos/exp-api/exp-api.xcodeproj/xcuserdata/hacker.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/macos/exp-api/js/: README.md  bun.lockb  index.ts  package.json
src/: api.rs  common.rs  error.rs  lib.rs  prelude.rs
src/apps/: linux.rs  mac.rs  mod.rs  windows.rs
src/utils/: image.rs  mac.rs  mod.rs
