[package]
name = "applications"
version = "0.1.1"
edition = "2021"
description = "A cross-platform library for finding installed applications."
license = "MIT"
repository = "https://github.com/HuakunShen/applications-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini = "1.3.0"
serde = "1.0.192"
walkdir = "2.4.0"
